--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -224,9 +224,9 @@ body {
 }
 
 .minecraft-modal-border {
-  border-top: 4px solid #000000;
-  border-left: 4px solid #000000;
-  border-right: 4px solid #000000;
-  border-bottom: 4px solid #000000;
-  border-radius: 8px;
+  border-top: 4px solid #383838;
+  border-left: 4px solid #383838;
+  border-right: 4px solid #efefef;
+  border-bottom: 4px solid #efefef;
+
 }
