--- a/src/app/css/globals.css
+++ b/src/app/css/globals.css
@@ -50,7 +50,7 @@ body {
 
 .textured-button {
   position: relative;
-  background-image: url(/images/texture-button.png);
+  background-image: url(https://pub-f3ed1098080a4128adc7fb10cb429333.r2.dev/images/texture-button.png);
   background-size: 3em;
   background-repeat: repeat;
   color: white;
